# RAGent

./: .dockerignore  .env.example  .gitignore  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  api.py  app.py  config.py  document_store.py  edges.py  evaluate.py  graph.py  ingestion.py  ingestion_jobs.py  nodes.py  rate_limiter.py  retrieval.py  state.py  utils.py
src/services/: chat_service.py  document_service.py  ingestion_service.py
tests/: conftest.py  test_abuse_controls.py  test_auth.py  test_chat_isolation.py  test_ingestion_state.py  test_upload_validation.py
